2005-03-13 Bogdan Gheorghe
	New UI items to support index framework
	
	* src/org/eclipse/cdt/internal/ui/CPluginResources
	* src/org/eclipse/cdt/ui/CUIPreferenceInitializer.java
	* src/org/eclipse/cdt/internal/ui/dialogs/IndexerBlock.java
	* src/org/eclipse/cdt/internal/ui/dialogs/IndexerOptionPropertyPage.java
	* src/org/eclipse/cdt/internal/ui/dialogs/SourceIndexerBlock.java
	* src/org/eclipse/cdt/ui/index/AbstractIndexerPage
	* plugin.xml
	
2005-03-12 Alain Magloire
	Plan item 79518: for PathEntry variable manager. Enable.
	* src/org/eclipse/cdt/internal/ui/preferences/PathEntryVariablesGroup.java
	* puglin.xml

2005-03-07 Alain Magloire
	Part of plan item 79518: for PathEntry variable manager.
	Not enable.
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/preferences/PathEntryVariableDialog.java
	* src/org/eclipse/cdt/internal/ui/preferences/PathEntryVariablePreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PathEntryVariableGroup.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties

2005-03-02 Alain Magloire
	Fix for PR 87027: Thanks to Jonathan Emmett, for noticing.
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java

2005-02-25 Alain Magloire
	Fix PR 82292: Code template variable not working.
	* src/org/eclipse/cdt/internal/corext/template/c/CContext.java
	* src/org/eclipse/cdt/internal/corext/template/c/CContextType.java
	* src/org/eclipse/cdt/internal/corext/template/c/TemplateMessage.properties
	* src/org/eclipse/cdt/internal/corext/template/c/TranslationUnitContext.java
	* src/org/eclipse/cdt/internal/corext/template/c/TranslationUnitContextType.java
	* src/org/eclipse/cdt/internal/ui/text/contentassit/CCompletionProcessor.java
	* templates/default-templates.xml

2005-02-25 Alain Magloire
	Fix PR 69572: Key binding action for Matching Bracket ... Ctrl+Shift+P
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java